[gd_scene load_steps=3 format=3 uid="uid://mjr0l8rokpkg"]

[ext_resource type="Script" path="res://Scenes/menu_GUI/settings_Ui/cofig_menu_uiSCRIPT.gd" id="1_yqpvi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fsccx"]

[node name="cofig_menu_ui" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yqpvi")

[node name="bg_panel" type="Panel" parent="."]
self_modulate = Color(0.298039, 0.298039, 0.298039, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -506.5
offset_top = -238.0
offset_right = 506.5
offset_bottom = 238.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fsccx")

[node name="config_label" type="Label" parent="bg_panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_top = 10.0
offset_right = 60.0
offset_bottom = 57.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 31
text = "Settings
"

[node name="OptionResolutionButton" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 250.0
offset_top = 199.0
offset_right = 562.0
offset_bottom = 219.0
alignment = 1

[node name="resolution_label" type="Label" parent="OptionResolutionButton"]
layout_mode = 0
offset_left = -92.0
offset_top = -1.0
offset_right = -5.0
offset_bottom = 25.0
text = "Resolution:"

[node name="OptionFpsButton" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 250.0
offset_top = 402.0
offset_right = 264.0
offset_bottom = 422.0
alignment = 1

[node name="fps_label" type="Label" parent="OptionFpsButton"]
layout_mode = 0
offset_left = -34.0
offset_top = 2.0
offset_right = 6.0
offset_bottom = 28.0
text = "FPS:"

[node name="HSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 822.0
offset_top = 202.0
offset_right = 1114.0
offset_bottom = 218.0
value = 100.0
rounded = true
tick_count = 10
ticks_on_borders = true

[node name="music" type="Label" parent="HSlider"]
layout_mode = 0
offset_left = -117.0
offset_top = -5.0
offset_right = -4.0
offset_bottom = 21.0
text = "Music Volume:"

[node name="amount_music_volume" type="Label" parent="HSlider"]
layout_mode = 0
offset_left = 291.0
offset_top = -3.0
offset_right = 331.0
offset_bottom = 23.0
text = "100"

[node name="save_button" type="Button" parent="."]
layout_mode = 0
offset_left = 1082.0
offset_top = 505.0
offset_right = 1126.0
offset_bottom = 536.0
text = "Save"

[node name="exit" type="Button" parent="."]
layout_mode = 0
offset_left = 1112.0
offset_top = 128.0
offset_right = 1142.0
offset_bottom = 159.0
text = "X"

[node name="popUP" type="Control" parent="."]
visible = false
top_level = true
anchors_preset = 0
offset_left = 461.0
offset_top = 234.0
offset_right = 836.0
offset_bottom = 433.0

[node name="Panel" type="Panel" parent="popUP"]
self_modulate = Color(0.458824, 0, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="popUP"]
layout_mode = 0
offset_left = 60.0
offset_top = 16.0
offset_right = 323.0
offset_bottom = 68.0
text = "Hay cambios sin guardar!
Seguro que quieres salir?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="save_and_exit" type="Button" parent="popUP"]
layout_mode = 0
offset_left = 128.0
offset_top = 79.0
offset_right = 250.0
offset_bottom = 110.0
text = "Guardar y salir"

[node name="dont_save_exit" type="Button" parent="popUP"]
layout_mode = 0
offset_left = 114.0
offset_top = 111.0
offset_right = 260.0
offset_bottom = 142.0
text = "No guardar y salir"

[node name="back" type="Button" parent="popUP"]
layout_mode = 0
offset_left = 158.0
offset_top = 158.0
offset_right = 215.0
offset_bottom = 189.0
text = "Volver"

[connection signal="item_selected" from="OptionResolutionButton" to="." method="_on_option_button_item_selected"]
[connection signal="item_selected" from="OptionFpsButton" to="." method="_on_option_fps_button_item_selected"]
[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="save_button" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="popUP/save_and_exit" to="." method="_on_save_and_exit_pressed"]
[connection signal="pressed" from="popUP/dont_save_exit" to="." method="_on_dont_save_exit_pressed"]
[connection signal="pressed" from="popUP/back" to="." method="_on_back_pressed"]
